[package]
name = "vectora-benchmarks"
version = "0.1.0"
authors = ["Chris Simpkins <chris@sourcefoundry.org>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/chrissimpkins/vectora-benchmarks"
description = "Benchmarks for the vectora crate"
readme = "README.md"

exclude = [
    "/testdata/*"
]

[dependencies]
vectora = "0.4.0"


[dev-dependencies]
# criterion = "0.3"
iai = "0.1"


[[bench]]
name = "vectora_benchmarks"
harness = false